--- a/location loc.css
+++ b/location loc.css
@@ -19,27 +19,34 @@ body {
     color: var(--textcolor);
 }
 
+      
 
-
-.message {
+        
+ 
+.content {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 100px;
     font-family: "Lilita One", sans-serif;
-    font-size: 40px;
+}
+
+.map-container {
+    width: 90%; 
+    margin-top: 120px;
+}
+
+.address {
+    width: 90%; 
+    margin-top: 20px;
+    font-size: 18px;
     
 }
 
-
 h1 {
     margin-bottom: 10px;
-    
+}
 
-}       
-
-        
- 
 @media (min-width: 600px) {
     .content {
         flex-direction: row;
