--- a/fmstyle.css
+++ b/fmstyle.css
@@ -18,12 +18,52 @@ body {
     background-color: var(--maincolor);
 }
 
+header {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 100%;
+    z-index: 999;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 80px;
+    background: var(--maincolor2);
+    opacity: 0.98;
+}
+.logo {
+    color: var(--maincolor);
+    font-weight: 200;
+    font-size: 2.2rem;
+}
+.logo img {
+    width: 30px;
+    height: auto;
+    align-items: center;
+}
+
+/*----------NAVIGATION BAR----------*/
+.navbar {
+    display: flex;
+}
+.navbar a {
+    color: var(--textcolor);
+    font-size: 1.1rem;
+    padding: 10px 30px;
+    font-weight: 200;
+}
+.navbar a:hover {
+    color: var(--maincolor);
+    transition: .3s;
+}
+
 .foodmenuheading {
     text-align: center;
     color: white;
     font-size: 3rem;
     font-weight: 200;
     padding: 25px;
+    padding-top: 125px;
 }
 
 .foodcategory-header{
@@ -133,6 +173,8 @@ body {
     color: var(--textcolor);
     font-weight: 200;
 }
+
+
 
 /*----------JAVASCRIPT---------*/
 
