--- a/location loc.css
+++ b/location loc.css
@@ -15,11 +15,48 @@
 }
 
 body {
-    background-color: var(--maincolor2);
+    background-color: var(--maincolor);
     color: var(--textcolor);
 }
 
+header {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 100%;
+    z-index: 999;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 80px;
+    background: var(--maincolor2);
+    opacity: 0.98;
+}
+.logo {
+    color: var(--maincolor);
+    font-weight: 200;
+    font-size: 2.2rem;
+}
+.logo img {
+    width: 30px;
+    height: auto;
+    align-items: center;
+}
 
+/*----------NAVIGATION BAR----------*/
+.navbar {
+    display: flex;
+}
+.navbar a {
+    color: var(--textcolor);
+    font-size: 1.1rem;
+    padding: 10px 30px;
+    font-weight: 200;
+}
+.navbar a:hover {
+    color: var(--maincolor);
+    transition: .3s;
+}
 
 .content {
     display: flex;
