--- a/back-end-css/admin.css
+++ b/back-end-css/admin.css
@@ -1,14 +1,14 @@
-/* 
-    Author: YB;
-    Theme: Food order website admin;
-    version: 1.0;
-
-*/
 
 *{
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+:root {
+    --maincolor: #282e32;
+    --maincolor2: #ab722c;
+    --textcolor: #ffffff;
 }
 
 .wrapper{
@@ -106,6 +106,7 @@ table tr td{
     color: blueviolet;
 
 }
+
 /* CSS for Main Content */
 .main-content{
     background-color: aliceblue;
@@ -122,6 +123,6 @@ table tr td{
 
 /* CSS for Footer */
 .footer{
-    background-color: #ab722c;
+    background-color: var(--maincolor2);
     color: white;
 }
