--- a/back-end-css/admin.css
+++ b/back-end-css/admin.css
@@ -1,14 +1,14 @@
+/* 
+    Author: YB;
+    Theme: Food order website admin;
+    version: 1.0;
+
+*/
 
 *{
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
-}
-
-:root {
-    --maincolor: #282e32;
-    --maincolor2: #ab722c;
-    --textcolor: #ffffff;
 }
 
 .wrapper{
@@ -83,6 +83,14 @@ table tr td{
     background-color: gray;
 }
 
+.success{
+    color: #2ed573;
+}
+
+.error{
+    color: #ff4757;
+}
+
 /* CSS for Menu */
 .menu{
     border-bottom: 1px solid grey;
@@ -106,7 +114,6 @@ table tr td{
     color: blueviolet;
 
 }
-
 /* CSS for Main Content */
 .main-content{
     background-color: aliceblue;
@@ -123,6 +130,14 @@ table tr td{
 
 /* CSS for Footer */
 .footer{
-    background-color: var(--maincolor2);
+    background-color: #ab722c;
     color: white;
+}
+
+/* CSS for login */
+.login{
+    border: 1px solid grey;
+    width: 20%;
+    margin: 10% auto;
+    padding: 2%;
 }
