--- a/back-end-css/admin.css
+++ b/back-end-css/admin.css
@@ -12,15 +12,14 @@
 }
 
 .wrapper{
-    
     padding: 1%;
     width: 80%;
     margin: 0 auto;
+    color: var(--textcolor);
 }
 
 .text-center{
     text-align: center;
-    
 }
 
 .clearfix{
@@ -40,11 +39,12 @@ table tr th{
     border-bottom: 1px solid black;
     padding: 1%;
     text-align: left;
-    
+    color: var(--textcolor);
 }
 
 table tr td{
     padding: 1%;
+    color: var(--textcolor);
 }
 
 .btn-primary{
@@ -56,25 +56,25 @@ table tr td{
 }
 
 .btn-primary:hover{
-    background-color: lightcoral;
+    background-color: var(--maincolor2);
 }
 
 .btn-secondary{
     background-color: lightcyan;
     padding: 1%;
-    color: black;
+    color: var(--maincolor);
     text-decoration: none;
     font-weight: bold;
 }
 
 .btn-secondary:hover{
-    background-color: purple;
+    background-color: var(--maincolor2);
 }
 
 .btn-danger{
     background-color: lightgoldenrodyellow;
     padding: 1%;
-    color: black;
+    color: var(--maincolor);
     text-decoration: none;
     font-weight: bold;
 }
@@ -99,23 +99,23 @@ table tr td{
 .menu ul li a{
     text-decoration: none;
     font-weight: bold;
-    color: black;
+    color: var(--maincolor);
 }
 
 .menu ul li a:hover{
-    color: blueviolet;
+    color: var(--maincolor2);
 
 }
 
 /* CSS for Main Content */
 .main-content{
-    background-color: aliceblue;
+    background-color: var(--maincolor);
     padding: 3% 0;
 }
 
 .col-4{
     width: 18%;
-    background-color: white;
+    background-color: var(--maincolor2);
     margin: 1%;
     padding: 2%;
     float: left;
